--- a/index.html
+++ b/index.html
@@ -7,31 +7,46 @@
     <meta name="keywords" content="Resume, Eugene, cv">
     <meta name="description" content="Это сайт - визитка Евгения Баклунина">
 <title>Eugene Resume</title>
+
+<link rel="stylesheet" href="01_style_index.css">
 </head>
 <body>
+<div class="box">
+    <div class="info">
+<img src="2023-08-19 16.32.29.jpg" width="200" alt="" class="img">
 <h1>Евгений Баклунин</h1>
 
+<em>Я являюсь <strong>frontend</strong> разрабочиком уровня <strong>junior</strong></em>
+<p><em>C огромным удовольствием готов взяться за <strong>Ваш проект.</strong></em></p>
 
-<img src="2023-08-19 16.32.29.jpg" width="200" alt="">
-<p>Я являюсь <strong>frontend</strong> разрабочиком уровня <strong>junior</strong></p>
-<hr size="3" noshade width="500" color="blue">
-<p>С огромным удовольствием готов взяться за <strong><em>Ваш проект.</em></strong></p>
-<hr size="3" noshade width="500" color="blue">
+    <p><h2><strong>Мои соцсети:</strong></h2>
+    <a href="https://t.me/Grooved66" target="_blank">Telegram</a>
+    |
+    <a href="https://vk.com/groovedealer" target="_blank">VKontakte</a>
+</p>
+    <br>
+    
 
-<h2><p><strong>Мои увлечения:</strong></h2>
-    <ol>
+</div>
+</div>
+
+<br>
+<div class="card">
+<h2><p><strong>Мои увлечения:</strong></h2></body>
+    <ol  class="list">
         <li>Музыка</li>
         <li>Путешествия</li>
         <li>Видеоигры</li>
     </ol>
 
 </p>
-<hr size="3" noshade width="500" color="blue">
+</div>
+<br>
 
-
+<div class="card">
 <h2><strong>Опыт работы:</strong></h2>
 
-<table>
+<table class="table">
     <thead>
         <tr>
             <th>Название</th>
@@ -58,33 +73,38 @@
         </tr>
     </tbody>
 </table>
-<hr size="3" noshade width="500" color="blue">
+</div>
+<br>
 
-<h2><strong>Мои соцсети:</strong></h2>
-<a href="https://t.me/Grooved66" target="_blank">Telegram</a>
-|
-<a href="https://vk.com/groovedealer" target="_blank">VKontakte</a>
 
+    <form action="/"class="form">
 <h2>Оставьте свои данные, и Я обязательно с Вами свяжусь!</h2>
-<div>
+
+<div class="form-row">
+<div class="form-group">
     <label for="text">Ваше имя:</label>
     <input type="text" id="text" placeholder="Введите Имя">
 </div>
 
-<div>
+<div class="form-group">
     <label for="email">Ваш Email:</label>
     <input type="email" id="email" placeholder="Введите Email">
 
+
 </div>
 
-<div>
+<div class="form-group">
 <label for="message">Напишите, что Вас интересует:</label>
-<br>
+
 <textarea id="message" cols="25" rows="5" placeholder="Ваше сообщение..."></textarea>
 
 </div>
-<button type="submit"> Отправить! 
+<button class="button" type="submit"> Отправить! 
 </button>
+</div>
+</div>
+</form>
+</div>
 
 </body>
 </html>
